# Python-Trading-WebApp-Backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  Dockerfile  FMP.py  README.md  cache.py  db.py  investor_deck.py  pyproject.toml  requirements.txt  sample.env  server.py  test_influxdb.py  test_timeseries.py
debug/: printException.py
scripts/: init_short_interest.py  seasonality.py
strategies/: Category.py  ShortInterest.py  Strategy.py  Type.py  __init__.py  all-stocks.yml  balance-sheet-strength.yml  cash-kings.yml  earnings-yield.yml  four-stars.yml  insider-ownership.yml  movers-and-shakers.yml  real-buybacks.yml  recently-listed.yml  revenue-growth.yml  rnd.yml  rocket-stocks.yml  short-interest.yml  short-squeeze-leaders.yml  short-squeeze-reversals.yml
timeseries/: .isort.cfg  PricingData.proto  PricingData_pb2.py  buckets.py  cron.py  db.py  gapFill.py  scraper.py  today.py  yahoo_finance.py
